--- a/popup.css
+++ b/popup.css
@@ -1,1 +1,76 @@
+body {
+    font-family: Arial, sans-serif;
+    width: 300px;
+    margin: 0;
+    padding: 10px;
+}
 
+.header {
+    background-color: #3b5998;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.theme-section, .task-list, .grade-preview, .settings {
+    margin-top: 15px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+input[type="text"], input[type="number"], input[type="color"] {
+    margin: 5px 0;
+    padding: 5px;
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+button {
+    margin-top: 5px;
+    padding: 5px 10px;
+    background-color: #3b5998;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    background-color: #5b7db1;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin-top: 5px;
+}
+
+.completed {
+    text-decoration: line-through;
+    color: grey;
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+body.dark-mode input, body.dark-mode button {
+    background-color: #2b2b2b;
+    color: #ffffff;
+    border: 1px solid #444;
+}
+
+.dark-mode .header {
+    background-color: #1e1e1e;
+}
+
+.dark-mode button {
+    background-color: #5b7db1;
+}
